# sagemcom-watcher

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/sagemcom_watcher/: __init__.py  __main__.py  config.py  main.py  storage.py  utils.py  watcher.py
src/sagemcom_watcher/web/: __init__.py  app.py  routes.py
src/sagemcom_watcher/web/static/css/: style.css
src/sagemcom_watcher/web/static/js/: app.js  charts.js  state.js  utils.js
src/sagemcom_watcher/web/templates/: index.html
tests/: test_storage.py  test_utils.py
